<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CiviliteFragment">

    <!-- Titre -->
    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="61dp"
        android:text="@string/about_app"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textSize="26sp"
        android:textStyle="bold" />

    <!-- Intro -->
    <TextView
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/about"
        android:layout_alignStart="@+id/about"
        android:layout_below="@+id/about"
        android:layout_marginTop="61dp"
        android:text="@string/about_intro"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

    <!-- Détails -->
    <TextView
        android:id="@+id/adresse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/intro"
        android:layout_alignStart="@+id/intro"
        android:layout_below="@+id/intro"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="21dp"
        android:text="@string/about_details"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

</RelativeLayout>
